[package]
name = "braces"
version = "0.1.0"
authors = ["certainty <david.krentzlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bench]]
# name = "compiler"
# harness = false

# [[bench]]
# name="vm"
# harness = false


[lib]
name="braces"
path="src/lib.rs"

[[bench]]
name="compiler_benchmark"
harness=false

[features]
debug_vm = []
debug_code = []

[dependencies]
# utils
log="0.4"
env_logger = "0.8"
pretty_env_logger = "0.4"
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"

# values
im-rc = "15.0"
rug = "1.12"

# compiler / interpreter
clap = "3.0.0-beta.2"
rustyline = "8.0.0"
hashbrown = "0.11"
fasthash = "0.4.0"
rustc-hash = "1.1.0"
arrayvec = "0.7.0"

#parser
nom_locate = "3.0"
nom = "6.1"

directories = "3.0"

[dev-dependencies]
matches = "0.1"
criterion = "0.3.4"
quickcheck = "1"
quickcheck_macros = "1.0"