[package]
name = "braces"
version = "0.1.0"
authors = ["certainty <david.krentzlin@gmail.com>"]
edition = "2018"

[lib]
name="braces"
path="src/lib.rs"

[[bench]]
name="compiler_benchmark"
harness=false

[[bench]]
name="vm_benchmark"
harness=false

[[bench]]
name="scheme_values_benchmark"
harness=false

[features]
debug_vm = []
debug_code = []

[dependencies]
# utils
log="0.4"
env_logger = "0.8"
pretty_env_logger = "0.4"
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"

# values
im-rc = "15.0"
rug = "1.12"
az = "1.1.1"

# compiler / interpreter
clap = "3.0.0-beta.2"
rustyline = "8.0.0"
hashbrown = "0.11"
fasthash = "0.4.0"
rustc-hash = "1.1.0"
arrayvec = "0.7.0"
codespan-reporting = "0.11"

#parser
nom_locate = "3.0"
nom = "6.1"

directories = "3.0"
rand = "0.8.4"

[dev-dependencies]
matches = "0.1"
criterion = "0.3.4"
cargo-criterion = "1.1.0"
quickcheck = "1"
quickcheck_macros = "1.0"