[package]
authors = ["certainty <david.krentzlin@gmail.com>"]
edition = "2018"
name = "braces"
version = "0.1.0"

[lib]
name = "braces"
path = "src/lib.rs"

[[bench]]
harness = false
name = "compiler_benchmark"

[[bench]]
harness = false
name = "vm_benchmark"

[[bench]]
harness = false
name = "scheme_values_benchmark"

[features]
debug_code = []
debug_vm = []

[dependencies]
# utils
anyhow = "1.0"
env_logger = "0.8"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1.0"

# values
az = "1.1.1"
im-rc = "15.0"
rug = "1.12"

# compiler / interpreter
arrayvec = "0.7.0"
clap = "3.0.10"
codespan-reporting = "0.11"
hashbrown = "0.11"
rustc-hash = "1.1.0"
rustyline = "8.0.0"

#parser
nom = "6.1"
nom_locate = "3.0"

directories = "3.0"
rand = "0.8.4"

[dev-dependencies]
cargo-criterion = "1.1.0"
criterion = "0.3.4"
matches = "0.1"
quickcheck = "1"
quickcheck_macros = "1.0"
